tests/NormalTests/paczka1/small_fuzzy/44938897.err
Error in line 13: gJ2ABhB S846 85,0
Error in line 15: gJ2ABhB A29 97,98
